docs: Update documentation with current Python app info, add version notes and getting started guide